# bitcoinParser-rs

./: Cargo.toml  LICENSE  README.md  bitcoin_parser.sublime-workspace  codeGeneration-01.nb  ratesTable.nb
src/: bitcoin_parser.rs  main.rs
src/bitcoin_parser/: basic_reading.rs  mod.rs
src/bitcoin_parser/script/: mod.rs  opcodes.rs
src/exchange_rates/: mod.rs  rates_table.rs
