[package]
name = "bitcoin_parser"
version = "0.1.0"
authors = ["Christopher Wolfram <chriscwolfram@gmail.com>"]
edition = "2018"


[dependencies]
chrono = "0.4"
rayon = "1.5"
bitcoin_hashes = "0.10"
# These must have exact version numbers because leveldb relies on an old version of db-key
leveldb = "0.8.6"
db-key = "0.0.5"

serde_json = "1.0"
# indicatif = {version = "*", features = ["rayon"]}